# polyRBM

./: README.md  analysisUtility.py  polyRBM.py  result_plots.ipynb  train.ipynb  train_linear.py  train_rings.py
polysim/: CMakeLists.txt  machine.h  main.cpp  matrix.h  my_types.h  numerics.cpp  numerics.h  pair.h  point.h  r250.cpp  r250.h  static_vector.h  tools.h
